# gkom-animation

./: CMakeLists.txt  gkom-animation.sln  gkom-animation.vcxproj  gkom-animation.vcxproj.filters  main.cpp
shaders/fragment/: basic.frag  tester.frag
shaders/vertex/: basic.vert
src/: Animation.cpp  Animation.h  FileSystem.cpp  FileSystem.h  MyWindow.cpp  MyWindow.h  Window.cpp  Window.h  exception.cpp  exception.h  file.cpp  file.h  opengl.h
src/3d/: Abs3DObj.cpp  Abs3DObj.h  Animation.cpp  Animation.h  Camera.cpp  Camera.h  Light.h  Point3D.cpp  Point3D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  gEngine.h
src/lib/: glm_ext.hpp  stb_image.h
visual-studio/: gkom-animation.sln
visual-studio/gkom-animation/: gkom-animation.vcxproj  gkom-animation.vcxproj.filters  main.cpp
visual-studio/gkom-animation/Debug/: vc141.idb
visual-studio/gkom-animation/Debug/gkom-animation.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gkom-animation.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
visual-studio/gkom-animation/src/: MyWindow.cpp  MyWindow.h  exception.cpp
visual-studio/gkom-animation/src/3d/: Abs3DObj.cpp  Abs3DObj.h  Animation.cpp  Animation.h  Camera.h  Light.cpp  Light.h  Point3D.cpp  Point3D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  gEngine.h
visual-studio/shaders/fragment/: tester.frag
visual-studio/shaders/vertex/: basic.vert
